@@ -9,6 +9,7 @@ iowow (1.2.15) UNRELEASED; urgency=medium
   * Added iwxstr_printf() (iwxstr.h)
   * Added iwxstr_cat2() (iwxstr.h)
   * Added `IWKV_VAL_INCREMENT` mode for `iwkv_put()` and test case (iwkv.h)
+  * Added support of variable-length encoded integer keys `IWDB_VNUM64_KEYS` (iwkv.h)
 
  -- Anton Adamansky <adamansky@gmail.com>  Fri, 09 Nov 2018 00:57:42 +0700
 
